add another style sheet of "safely" theme
別のテーマを追加

--- a/theme_ftb/user.css
+++ b/theme_ftb/user.css
@@ -1,3 +1,10 @@
+/*============================================================
+ukigumo
+: Style Sheet for Mstdn, a desktop client of Mastdon
+: written by 「」 （https://github.com/D9XSkeFUtRqs/ukigumo）
+============================================================*/
+
+
 /* 他のCSSの存在により詳細度が複雑 */
 /* 計算したくないので!importantがむちゃくちゃ多いです。 */
 
